simple portfolio list

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello there
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Jamie Henson</title>
+    <link rel="stylesheet" href="pico.purple.min.css">
+    <style>
+      html, body {
+        background: rgb(76 29 149);
+      }
+      .spacer {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-bottom: 1rem;
+      }
+      .container {
+        margin-top: 2rem;
+      }
+      h1 {
+        margin: 0;
+      }
+      h1, p, li, a, span {
+        color: white;
+      }
+    </style>
+  </head>
+  <body>
+	<script src="index.js"></script>
+  <div class="container">
+    <div class="spacer">
+      <h1>Jamie Henson</h1>
+      <div>
+        <a target="_blank" href="https://www.linkedin.com/in/jamiehenson/">LinkedIn</a>
+        <span> | </span>
+        <a target="_blank" href="https://github.com/jamiehenson">GitHub</a>
+      </div>
+    </div>
+    <p>I'm a software engineer based in Cheltenham, UK 🇬🇧.</p>
+    <p>This site is mainly a storage cupboard for things I've tinkered with along the way, such as:</p>
+    <ul>
+      <li><strong><a target="_blank" href="https://jamiehenson.com/inky500">Inky 500</a></strong> (2024) - An F1-inspired standings board for the sim racing league I compete in. Keeping up with Vue.</li>
+      <li><strong><a target="_blank" href="https://jamiehenson.com/thecircle">The Circle</a></strong> (2020) - A knockoff of the game show The Wheel as a Vue experiment (unfinished).</li>
+      <li><strong><a target="_blank" href="https://jamiehenson.com/critter-collector">Critter Collector</a></strong> (2020) - A Pokemon-like game in React I did for an interview take-home test that was too good to bury.</li>
+      <li><strong><a target="_blank" href="https://jamiehenson.com/laspring">LA Spring</a></strong> (2016) - An interactive arcade I made to promote my old band's new single.</li>
+      <li><strong><a target="_blank" href="https://jamiehenson.com/7min">7 Minute Workout</a></strong> (2016) - A simple callisthenics exercise app inspired by other popular ones.</li>
+      <li><strong><a target="_blank" href="https://jamiehenson.com/bond">The Man With The Golden Fun</a></strong> (2015) - A James Bond drinking game, license to spill 🔫</li>
+    </ul>
+  </div>
+  </body>
+</html>
